--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:value="1" />
 
         <activity
-            android:name="com.codepath.apps.basictwitter.LoginActivity"
+            android:name="com.codepath.apps.basictwitter.activities.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,16 +44,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.codepath.apps.basictwitter.TimelineActivity"
+            android:name="com.codepath.apps.basictwitter.activities.TimelineActivity"
             android:label="@string/title_activity_timeline" >
         </activity>
         <activity
-            android:name="com.codepath.apps.basictwitter.ComposeActivity"
+            android:name="com.codepath.apps.basictwitter.activities.ComposeActivity"
             android:label="@string/title_activity_compose" >
         </activity>
         <activity
-            android:name="com.codepath.apps.basictwitter.TweetDetailActivity"
+            android:name="com.codepath.apps.basictwitter.activities.TweetDetailActivity"
             android:label="@string/title_activity_tweet_detail" >
+        </activity>
+        <activity
+        	android:name="com.codepath.apps.basictwitter.activities.ProfileActivity"
+            android:label="@string/title_activity_profile" >
         </activity>
     </application>
 
